# cams-act6

./: README.md  environment.yml  jupyter-notebook-template.ipynb
01-satellite/: 01_fire_greece_2023_s3_metop.ipynb  02_fire_greece_2023_tropomi.ipynb  02_fire_greece_2023_tropomi_test.ipynb  Questions.ipynb  helper_functions.ipynb
01-satellite/additional_material/: 1_S3_FRP_AOD.ipynb
02-in-situ/: 21_Pandonia_TXT_O3.ipynb  22_Pandonia_TXT_NO2.ipynb  23_search_ACTRIS_data_portal_OC_EC.ipynb  25_access_ACTRIS_in-situ_NRT_data_ACSM.ipynb  26_ACTRIS_in-situ_NOx.ipynb  search_actris_data_portal.ipynb
02-in-situ/static/: basket.json  basket_NOx_Hyytiala.json
03-model/: README.md  cams-global-forecast.ipynb  cams-global-reanalysis.ipynb  cams-regional-forecast.ipynb  cams_global_aerosol_forecast.ipynb  cams_regional_ozone_forecast.ipynb  climatology_temperature_anomalies.ipynb
04-emissions/: emissions.ipynb
05-cams-mos/: cams-mos.ipynb  policy_tools.ipynb
06-ak/: inverse_methods.ipynb  satellite_retrievals.ipynb
06-ak/data/S5P_NRTI_L2_NO2_20240815/: S5P_NRTI_L2_NO2_20240815.cdl
06-ak/notebook_1/: satellite_model_comparison_theory.ipynb
06-ak/notebook_2/: ozone_profile_tropomi_analysis.ipynb  utils_o3.py
06-ak/notebook_3/: no2_tropomi_cams_regional.ipynb  utils_no2.py
07-aeroval/: aeroval-regional-statistics.ipynb
08-aqi/: cams_glob_eaqi.ipynb  cams_glob_eaqi_test.ipynb
09-policy/: cities.txt  policy_tools.ipynb
aeroval/: maps.ipynb  pyproject.toml  timeseries.ipynb
binder/: environment.yml
(+1 files in other folders)
